[gd_scene load_steps=8 format=3 uid="uid://b03vymllo0eva"]

[ext_resource type="Script" path="res://scripts/pausemenu.gd" id="1_0nxk2"]
[ext_resource type="StyleBox" uid="uid://04i0fc46yi0a" path="res://assets/button.tres" id="1_8wy5j"]
[ext_resource type="StyleBox" uid="uid://cpbuhpi1vpbpe" path="res://assets/panel.tres" id="2_58iyr"]
[ext_resource type="StyleBox" uid="uid://5xmq7qx6lyt1" path="res://assets/button_fh.tres" id="2_ossdc"]
[ext_resource type="StyleBox" uid="uid://dfojhhfm26pbu" path="res://assets/button_press.tres" id="3_rer1e"]
[ext_resource type="StyleBox" uid="uid://c7e3ekqxdgnam" path="res://assets/button_disabled.tres" id="4_ptkgo"]

[sub_resource type="LabelSettings" id="LabelSettings_km5qq"]
font_size = 32

[node name="KAKAKAKKSkibidi Toilelt" type="CanvasLayer"]
script = ExtResource("1_0nxk2")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -160.0
offset_right = 320.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_58iyr")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_km5qq")

[node name="ResumeButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 176.0
offset_top = 38.0
offset_right = 464.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("1_8wy5j")
theme_override_styles/hover = ExtResource("2_ossdc")
theme_override_styles/pressed = ExtResource("3_rer1e")
theme_override_styles/disabled = ExtResource("4_ptkgo")
theme_override_styles/focus = ExtResource("2_ossdc")
action_mode = 0
text = "Resume"

[node name="OptionsButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 176.0
offset_top = 104.0
offset_right = 464.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("1_8wy5j")
theme_override_styles/hover = ExtResource("2_ossdc")
theme_override_styles/pressed = ExtResource("3_rer1e")
theme_override_styles/disabled = ExtResource("4_ptkgo")
theme_override_styles/focus = ExtResource("2_ossdc")
action_mode = 0
text = "Settings"

[node name="MenuButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 176.0
offset_top = 168.0
offset_right = 464.0
offset_bottom = 228.0
theme_override_styles/normal = ExtResource("1_8wy5j")
theme_override_styles/hover = ExtResource("2_ossdc")
theme_override_styles/pressed = ExtResource("3_rer1e")
theme_override_styles/disabled = ExtResource("4_ptkgo")
theme_override_styles/focus = ExtResource("2_ossdc")
action_mode = 0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 176.0
offset_top = 232.0
offset_right = 464.0
offset_bottom = 292.0
theme_override_styles/normal = ExtResource("1_8wy5j")
theme_override_styles/hover = ExtResource("2_ossdc")
theme_override_styles/pressed = ExtResource("3_rer1e")
theme_override_styles/disabled = ExtResource("4_ptkgo")
theme_override_styles/focus = ExtResource("2_ossdc")
action_mode = 0
text = "Quit"

[connection signal="pressed" from="Panel/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_quit_button_pressed"]
